--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@afipsdk/afip.js": "^0.7.1",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
