--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "sequelize": "^6.6.5",
     "styled-components": "^5.3.0",
+    "sweetalert2": "^11.1.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
