--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2",
     "react-data-table-component": "^7.0.0-rc2",
     "react-dom": "^17.0.2",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sequelize": "^6.6.5",
