--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tabs": "^3.2.3",
     "sequelize": "^6.6.5",
     "styled-components": "^5.3.0",
     "sweetalert2": "^11.1.5",
