--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.3",
+    "react-vis": "^1.11.7",
     "sequelize": "^6.6.5",
     "styled-components": "^5.3.0",
     "sweetalert2": "^11.1.5",
