--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,14 @@
   "dependencies": {
     "@afipsdk/afip.js": "^0.7.1",
     "@date-io/date-fns": "^1.3.13",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/lab": "^5.0.0-alpha.59",
+    "@mui/material": "^5.2.3",
     "@mui/x-data-grid": "^4.0.2",
     "@sweetalert2/themes": "^5.0.4",
     "@testing-library/jest-dom": "^5.14.1",
