--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-data-table-component": "^7.0.0-rc2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-input-mask": "^2.0.4",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
