--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,10 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-#/node_modules
+/node_modules
 /.pnp
 .pnp.js
-
+tls_cert.cert
+tls_key.key
+tls_pem.pem
 # testing
 /coverage
 
