--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "@afipsdk/afip.js": "^0.7.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
