--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/lab": "^5.0.0-alpha.59",
     "@mui/material": "^5.2.3",
     "@mui/x-data-grid": "^4.0.2",
+    "@react-pdf/renderer": "^2.1.1",
     "@sweetalert2/themes": "^5.0.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -21,14 +22,17 @@
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
+    "jspdf": "^2.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.12",
+    "qrcode.react": "^3.0.1",
     "react": "^17.0.2",
     "react-data-table-component": "^7.0.0-rc2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-input-mask": "^2.0.4",
     "react-pro-sidebar": "^0.7.1",
+    "react-qr-code": "^2.0.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.3",
