--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.12",
