Avancé con Recargos Automáticos

--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "knex": "^0.95.11",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
+    "node-cron": "^3.0.0",
     "sequelize": "^6.6.5",
     "uuid": "^8.3.2"
   }
